--- a/app/assets/stylesheets/resque_web/bootstrap_and_overrides.css.scss.erb
+++ b/app/assets/stylesheets/resque_web/bootstrap_and_overrides.css.scss.erb
@@ -10,7 +10,7 @@ html {
 }
 
 body {
-  padding-top: 40px;
+  padding-top: 55px;
 }
 
 .navbar {
@@ -54,7 +54,7 @@ body {
 }
 
 /* The remaining CSS rules come from the legacy Resque application */
-.subnav { padding: 8px 10px 7px 10px; background:#ce1212; font-size:90%;}
+.subnav { padding: 3px 0 8px 0; background:#ce1212; font-size:90%;}
 .subnav li { display:inline; line-height: 16px; }
 .subnav li a { color:#fff; text-decoration:none; margin:3px; display:inline-block; background:#dd5b5b; padding:5px; -webkit-border-radius:3px; -moz-border-radius:3px;}
 .subnav li.current a { background:#fff; font-weight:bold; color:#ce1212;}
